# pagemenot

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  TODO.md  cloudbuild.yaml  deployment.md  docker-compose.yml  pyproject.toml  setup.sh  slack-manifest.yaml
.claude/agents/: README.md  documentation-agent.md  script-agent.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/02-gcp-alert-ingestion-exec/: 02-02-SUMMARY.md  02-03-SUMMARY.md  02-04-SUMMARY.md  02-05-PLAN.md  02-05-SUMMARY.md  02-06-PLAN.md  02-06-SUMMARY.md
.planning/phases/04-azure-monitor-support-and-testing/: .continue-here.md  04-01-PLAN.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-04-PLAN.md  04-05-PLAN.md
.serena/: project.yml
config/: services.yaml
demo/k8s/: backend.yaml  frontend.yaml  loadgen.yaml
deploy/: generic-userdata.sh  main.tf  pagemenot-iam-policy.json  pagemenot-trust-policy.json
docs/: deployment.md
knowledge/: services.yaml
knowledge/postmortems/: api-gateway_20260304-111809.md  checkout-service_20260302-115857.md  checkout-service_20260302-121012.md  checkout-service_20260302-122059.md  checkout-service_20260302-135030.md  checkout-service_20260302-144816.md  checkout-service_20260302-151301.md  checkout-service_20260302-171213.md  checkout-service_20260306-214139-9b966d.md  inc-189-payment-500s.md  inc-201-checkout-oomkill.md  inc-215-223-gateway-db.md  nginx-cache_20260304-165934.md  nginx-cache_20260304-170236-ab739d.md  payment-service_20260302-135517.md  payment-service_20260302-140503.md  payment-service_20260302-151747.md  payment-service_20260302-171104.md  payment-service_20260306-213550-abbd91.md  payment-service_20260306-213559-06eaac.md  user-service_20260302-153546.md  user-service_20260302-154414.md  user-service_20260302-155427.md  user-service_20260302-160153.md  user-service_20260302-163652.md
knowledge/runbooks/: cloud-run-unavailable.md  cloud-sql-unavailable.md  database-connection-pool.md  disk-pressure.md  ec2-high-cpu.md  gce-nginx-stopped.md  high-cpu-throttling.md  high-error-rate.md  high-latency.md  kafka-consumer-lag.md  lambda-error-rate.md  nginx-cache-flush.md  oomkill-response.md  pod-crashloop.md  redis-memory-pressure.md  rollback-procedure.md  ssl-certificate-expiry.md
knowledge/runbooks/aws/: ec2-nginx-restart.md  ecs-service-unhealthy.md  rds-instance-stopped.md
knowledge/runbooks/aws/_staging/: ec2-high-cpu.md  lambda-error-rate.md  rds-high-connections.md
knowledge/runbooks/azure/: azure-app-service-down.md  azure-cosmos-db-throttled.md  azure-function-app-unhealthy.md  azure-postgres-down.md  azure-redis-down.md  azure-sql-paused.md  azure-vm-nginx-down.md  azure-vm-stopped.md
knowledge/runbooks/azure/_staging/: azure-cosmos-db-throttled.md  azure-cosmos-db-unavailable.md  azure-function-app-unhealthy.md  azure-postgres-down.md  azure-redis-down.md  azure-sql-paused.md  azure-vm-nginx-down.md  azure-vm-stopped.md
knowledge/runbooks/gcp/: cloud-run-unavailable.md  gce-instance-stopped.md
knowledge/runbooks/generic/: disk-pressure.md
knowledge/runbooks/k8s/: oomkill-response.md  pod-crashloop.md
pagemenot/: config.py  crew.py  main.py  mock_tools.py  rag.py  slack_bot.py  tools.py  triage.py
pagemenot/knowledge/: rag.py
scripts/: gen-kubeconfig.sh  install-hooks.sh  simulate_incident.py
scripts/hooks/: pre-commit  pre-push
tests/: conftest.py  test_jira_tracking.py  test_rag_filtering.py  test_triage.py  test_webhooks.py
(+7 files in other folders)
