[project]
name = "pagemenot"
version = "0.1.0"
description = "AI SRE Crew — triages incidents with specialized agents, learns from your incident history"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    # CrewAI core
    "crewai[tools,google-genai,litellm]>=0.105",

    # Slack
    "slack-bolt>=1.20",
    "slack-sdk>=3.30",

    # API & web
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "slowapi>=0.1.9",

    # Config
    "pydantic>=2.0",
    "pydantic-settings>=2.0",

    # Vector store
    "chromadb>=0.5",

    # LLM providers
    "openai>=1.40",
    "anthropic>=0.34",
    "ollama>=0.4",

    # Optional: approval state persistence
    "redis[asyncio]>=5.0",

    # Optional: Azure VM Run Command
    "azure-identity>=1.15",
    "azure-mgmt-compute>=30.0",

    # AWS SDK
    "boto3>=1.34",

    # Cloud state bucket (GCS/S3/Azure)
    "google-cloud-storage>=2.16",
    "azure-storage-blob>=12.19",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
